@@ -29,8 +29,8 @@
 #include "nv.h"
 
 // Top is numbers, bottom is strings
-typedef enum { ALL_SUBJ = SUBJ_START, AUID, UID, SESSIONID, PID, PATTERN, SUBJ_TRUST,
-	COMM, EXE, EXE_DIR, EXE_TYPE, EXE_DEVICE } subject_type_t;
+typedef enum { ALL_SUBJ = SUBJ_START, AUID, UID, SESSIONID, PID, PATTERN,
+	SUBJ_TRUST, COMM, EXE, EXE_DIR, EXE_TYPE, EXE_DEVICE } subject_type_t;
 
 #define SUBJ_END EXE_DEVICE
 
